@@ -3,13 +3,11 @@ package mctmods.immersivetechnology.common.blocks.metal.logic;
 import com.immersiveconvergence.api.MechanicalCapabilities;
 import com.immersiveconvergence.api.capability.IMechanicalEnergyProvider;
 import mctmods.immersivetechnology.common.blocks.helper.ITBaseBlockEntity;
-import mctmods.immersivetechnology.common.blocks.helper.ITClientTickableBE;
-import mctmods.immersivetechnology.common.blocks.metal.RotorCreativeBlock;
+import mctmods.immersivetechnology.common.blocks.helper.ITIClientTickableBE;
 import mctmods.immersivetechnology.core.util.TranslationKey;
 import mctmods.immersivetechnology.core.registration.ITBlockEntities;
 import mctmods.immersivetechnology.core.registration.ITMenuTypes;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.MenuProvider;
@@ -17,14 +15,11 @@ import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.util.LazyOptional;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-public class RotorCreativeBlockEntity extends ITBaseBlockEntity implements MenuProvider, ITClientTickableBE {
+public class RotorCreativeBlockEntity extends ITBaseBlockEntity implements MenuProvider, ITIClientTickableBE {
     public int rpm;
-    private final LazyOptional<IMechanicalEnergyProvider> providerCap = LazyOptional.of(Provider::new);
     public float animation_rotation = 0f;
     public float animation_step = 0f;
 
@@ -37,12 +32,7 @@ public class RotorCreativeBlockEntity extends ITBaseBlockEntity implements MenuP
         animation_rotation %= 360;
     }
 
-    @Override @NotNull public <T> LazyOptional<T> getCapability(@NotNull Capability<T> cap, @Nullable Direction side) {
-        Direction facing = getBlockState().getValue(RotorCreativeBlock.FACING);
-        if ((side == facing || side == facing.getOpposite()) && cap == MechanicalCapabilities.MECHANICAL_PROVIDER_CAPABILITY) { return providerCap.cast(); }
-        return super.getCapability(cap, side);
-    }
-
+    @SuppressWarnings("unused")
     private class Provider implements IMechanicalEnergyProvider {
         @Override public int getSpeed() { return rpm; }
         @Override public float getTorque() { return 1f; }
@@ -71,7 +61,7 @@ public class RotorCreativeBlockEntity extends ITBaseBlockEntity implements MenuP
     @Override public void receiveMessageFromClient(CompoundTag message) {
         if (message.contains("rpm")) {
             int newRpm = message.getInt("rpm");
-            rpm = Math.max(Math.min(newRpm, MechanicalCapabilities.MAX_RPM), -MechanicalCapabilities.MAX_RPM);
+            rpm = Math.clamp(newRpm, -MechanicalCapabilities.MAX_RPM, MechanicalCapabilities.MAX_RPM);
             setChanged();
             markContainingBlockForUpdate(null);
         }
