@@ -2,6 +2,7 @@ package mctmods.immersivetechnology.common.multiblocks.metal.logic;
 
 import blusunrize.immersiveengineering.api.energy.AveragingEnergyStorage;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IClientTickableComponent;
+import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IMultiblockComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IServerTickableComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.RedstoneControl;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.env.IInitialMultiblockContext;
@@ -9,7 +10,6 @@ import blusunrize.immersiveengineering.api.multiblocks.blocks.env.IMultiblockCon
 import blusunrize.immersiveengineering.api.multiblocks.blocks.logic.IMultiblockLogic;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.logic.IMultiblockState;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.util.*;
-import blusunrize.immersiveengineering.api.utils.CapabilityReference;
 import blusunrize.immersiveengineering.common.blocks.multiblocks.process.MultiblockProcessor;
 import blusunrize.immersiveengineering.common.util.Utils;
 import com.google.common.collect.ImmutableList;
@@ -27,28 +27,28 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.shapes.VoxelShape;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.energy.IEnergyStorage;
-import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.fluids.IFluidTank;
-import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.items.IItemHandler;
-import net.minecraftforge.items.IItemHandlerModifiable;
+import net.neoforged.neoforge.capabilities.Capabilities;
+import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.IFluidTank;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler;
+import net.neoforged.neoforge.items.IItemHandler;
+import net.neoforged.neoforge.items.IItemHandlerModifiable;
 
 import java.util.List;
 import java.util.function.BooleanSupplier;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.Supplier;
 
-public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<ElectrolyticCrucibleBatteryLogic.State>, IServerTickableComponent<ElectrolyticCrucibleBatteryLogic.State>, IClientTickableComponent<ElectrolyticCrucibleBatteryLogic.State>, ITPressurizedFluidOutput<ElectrolyticCrucibleBatteryLogic.State> {
+public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<ElectrolyticCrucibleBatteryLogic.State>, IServerTickableComponent<ElectrolyticCrucibleBatteryLogic.State>, IClientTickableComponent<ElectrolyticCrucibleBatteryLogic.State>, ITIPressurizedFluidOutput<ElectrolyticCrucibleBatteryLogic.State> {
 
     public static final int INPUT_TANK_CAPACITY = ITServerConfig.electrolyticCrucibleBatteryInputTankCapacity;
     public static final int OUTPUT_TANK_CAPACITY = ITServerConfig.electrolyticCrucibleBatteryOutputTankCapacity;
@@ -56,14 +56,18 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
 
     private static final List<PoIJSONSchema> RAW_POIS = ImmutableList.copyOf(ElectrolyticCrucibleBatteryShape.DATA.pointsOfInterest);
 
-    public static final BlockPos REDSTONE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "redstone0").get(0);
+    public static final BlockPos REDSTONE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "redstone0").getFirst();
     public static final List<BlockPos> INPUT_FLUID_POIS = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_input0");
     public static final List<BlockPos> OUTPUT_FLUID_POIS_0 = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_output0");
     public static final List<BlockPos> OUTPUT_FLUID_POIS_1 = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_output1");
     public static final List<BlockPos> OUTPUT_FLUID_POIS_2 = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_output2");
     private static final List<BlockPos> ENERGY_INPUT_POIS = ITMultiblockPOIHelper.getPosList(RAW_POIS, "energy_input0");
     private static final RelativeBlockFace ENERGY_INPUT_FACING = ITMultiblockPOIHelper.getFacing(RAW_POIS, "energy_input0");
-    public static final MultiblockFace ITEM_OUTPUT_POI = new MultiblockFace(ITMultiblockPOIHelper.getFacing(RAW_POIS, "item_output0"), ITMultiblockPOIHelper.getPosList(RAW_POIS, "item_output0").get(0));
+    private static final RelativeBlockFace INPUT_FLUID_FACING = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_input0");
+    private static final RelativeBlockFace OUTPUT_FLUID_FACING_0 = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output0");
+    private static final RelativeBlockFace OUTPUT_FLUID_FACING_1 = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output1");
+    private static final RelativeBlockFace OUTPUT_FLUID_FACING_2 = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output2");
+    public static final MultiblockFace ITEM_OUTPUT_POI = new MultiblockFace(ITMultiblockPOIHelper.getFacing(RAW_POIS, "item_output0"), ITMultiblockPOIHelper.getPosList(RAW_POIS, "item_output0").getFirst());
     private static final RelativeBlockFace OUTPUT_FACING = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output0");
     private static final List<RelativeBlockFace> OUTPUT_FACINGS = ImmutableList.of(
             ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output0"),
@@ -71,7 +75,7 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
             ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output2")
     );
 
-    private static final List<BlockPos> FLUID_OUTPUT_POIS = ImmutableList.of(OUTPUT_FLUID_POIS_0.get(0), OUTPUT_FLUID_POIS_1.get(0), OUTPUT_FLUID_POIS_2.get(0));
+    private static final List<BlockPos> FLUID_OUTPUT_POIS = ImmutableList.of(OUTPUT_FLUID_POIS_0.getFirst(), OUTPUT_FLUID_POIS_1.getFirst(), OUTPUT_FLUID_POIS_2.getFirst());
 
     @Override public List<BlockPos> getOutputPositions() { return FLUID_OUTPUT_POIS; }
 
@@ -85,7 +89,7 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
         State state = ctx.getState();
         List<BlockPos> soundPosList = ITMultiblockPOIHelper.getPosList(RAW_POIS, "sound0");
         if (soundPosList.isEmpty()) { return; }
-        BlockPos soundBlockPos = soundPosList.get(0);
+        BlockPos soundBlockPos = soundPosList.getFirst();
         Vec3 soundPos = ctx.getLevel().toAbsolute(new Vec3(soundBlockPos.getX() + 0.5, soundBlockPos.getY() + 0.5, soundBlockPos.getZ() + 0.5));
         LocalPlayer player = Minecraft.getInstance().player;
         if (player == null) { return; }
@@ -109,9 +113,9 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
         boolean prevTanksDirty = state.tanksDirty;
         boolean prevInventoryDirty = state.inventoryDirty;
         boolean wasActive = state.active;
-        ElectrolyticCrucibleBatteryRecipe recipe = ElectrolyticCrucibleBatteryRecipe.findRecipe(ctx.getLevel().getRawLevel(), state.tanks.input.getFluid());
+        RecipeHolder<ElectrolyticCrucibleBatteryRecipe> holder = ElectrolyticCrucibleBatteryRecipe.findRecipe(ctx.getLevel().getRawLevel(), state.tanks.input.getFluid());
         state.active = state.processor.tickServer(state, ctx.getLevel(), state.rsState.isEnabled(ctx));
-        tryEnqueueProcess(state, ctx.getLevel().getRawLevel(), recipe);
+        tryEnqueueProcess(state, ctx.getLevel().getRawLevel(), holder);
         pumpOutputs(ctx);
         IItemHandlerModifiable inventory = state.inventory;
         ItemStack itemOutput = inventory.getStackInSlot(0);
@@ -125,35 +129,41 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
         if (update) { ctx.markMasterDirty(); ctx.requestMasterBESync(); }
     }
 
-    private void tryEnqueueProcess(State state, Level level, ElectrolyticCrucibleBatteryRecipe recipe) {
+    private void tryEnqueueProcess(State state, Level level, RecipeHolder<ElectrolyticCrucibleBatteryRecipe> holder) {
         if (state.processor.getQueueSize() >= state.processor.getMaxQueueSize()) { return; }
-        if (recipe == null) { return; }
+        if (holder == null) { return; }
+        ElectrolyticCrucibleBatteryRecipe recipe = holder.value();
         FluidStack inputFluid = state.tanks.input.getFluid();
-        if (inputFluid.getAmount() < recipe.fluidInput0.getAmount()) { return; }
+        if (inputFluid.getAmount() < recipe.getInputAmount()) { return; }
         if (recipe.fluidOutput0 != null && state.tanks.output0.getFluidAmount() + recipe.fluidOutput0.getAmount() > state.tanks.output0.getCapacity()) { return; }
         if (recipe.fluidOutput1 != null && state.tanks.output1.getFluidAmount() + recipe.fluidOutput1.getAmount() > state.tanks.output1.getCapacity()) { return; }
         if (recipe.fluidOutput2 != null && state.tanks.output2.getFluidAmount() + recipe.fluidOutput2.getAmount() > state.tanks.output2.getCapacity()) { return; }
-        ElectrolyticCrucibleBatteryProcess process = new ElectrolyticCrucibleBatteryProcess(recipe);
+        ElectrolyticCrucibleBatteryProcess process = new ElectrolyticCrucibleBatteryProcess(holder);
         process.setInputTanks(0);
         state.processor.addProcessToQueue(process, level, false);
     }
 
-    @Override public <T> LazyOptional<T> getCapability(IMultiblockContext<State> ctx, CapabilityPosition position, Capability<T> cap) {
-        State state = ctx.getState();
-        BlockPos localPos = position.posInMultiblock();
-        RelativeBlockFace side = position.side();
-        if (cap == ForgeCapabilities.ENERGY) {
-            if (ENERGY_INPUT_POIS.contains(localPos) && (side == null || side == ENERGY_INPUT_FACING)) { return state.energyCap.cast(ctx); }
-        } else if (cap == ForgeCapabilities.FLUID_HANDLER) {
-            if (INPUT_FLUID_POIS.contains(localPos) && (side == null || side == ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_input0"))) { return state.inputCap.cast(ctx); }
-            if (OUTPUT_FLUID_POIS_0.contains(localPos) && (side == null || side == ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output0"))) { return state.outputCap0.cast(ctx); }
-            if (OUTPUT_FLUID_POIS_1.contains(localPos) && (side == null || side == ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output1"))) { return state.outputCap1.cast(ctx); }
-            if (OUTPUT_FLUID_POIS_2.contains(localPos) && (side == null || side == ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output2"))) { return state.outputCap2.cast(ctx); }
-        } else if (cap == ForgeCapabilities.ITEM_HANDLER) {
-            if (position.posInMultiblock().equals(ITEM_OUTPUT_POI.posInMultiblock()) && (position.side() == null || position.side() == ITEM_OUTPUT_POI.face())) { return state.itemOutputCap.cast(ctx); }
-            return state.invCap.cast(ctx);
-        }
-        return LazyOptional.empty();
+    @Override
+    public void registerCapabilities(IMultiblockComponent.CapabilityRegistrar<State> register) {
+        register.register(Capabilities.EnergyStorage.BLOCK, (state, position) -> {
+            BlockPos localPos = position.posInMultiblock();
+            RelativeBlockFace side = position.side();
+            if (ENERGY_INPUT_POIS.contains(localPos) && (side == null || side == ENERGY_INPUT_FACING)) { return state.energy; }
+            return null;
+        });
+        register.register(Capabilities.FluidHandler.BLOCK, (state, position) -> {
+            BlockPos localPos = position.posInMultiblock();
+            RelativeBlockFace side = position.side();
+            if (INPUT_FLUID_POIS.contains(localPos) && (side == null || side == INPUT_FLUID_FACING)) { return state.inputCap; }
+            if (OUTPUT_FLUID_POIS_0.contains(localPos) && (side == null || side == OUTPUT_FLUID_FACING_0)) { return state.outputCap0; }
+            if (OUTPUT_FLUID_POIS_1.contains(localPos) && (side == null || side == OUTPUT_FLUID_FACING_1)) { return state.outputCap1; }
+            if (OUTPUT_FLUID_POIS_2.contains(localPos) && (side == null || side == OUTPUT_FLUID_FACING_2)) { return state.outputCap2; }
+            return null;
+        });
+        register.register(Capabilities.ItemHandler.BLOCK, (state, position) -> {
+            if (position.posInMultiblock().equals(ITEM_OUTPUT_POI.posInMultiblock()) && (position.side() == null || position.side() == ITEM_OUTPUT_POI.face())) { return state.itemOutputCap; }
+            return state.invCap;
+        });
     }
 
     @Override public void dropExtraItems(State state, Consumer<ItemStack> drop) { ITMultiBlockInventoryUtils.dropItems(state.inventory, drop); }
@@ -162,17 +172,16 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
 
     @Override public Function<BlockPos, VoxelShape> shapeGetter(ShapeType shapeType) { return ElectrolyticCrucibleBatteryShape.GETTER; }
 
-    public static class State implements IMultiblockState, ITProcessContext.ProcessContextInMachine<ElectrolyticCrucibleBatteryRecipe>, ITDisplayContext {
+    public static class State implements IMultiblockState, ITIProcessContext.IProcessContextInMachine<ElectrolyticCrucibleBatteryRecipe>, ITIDisplayContext {
         public final RedstoneControl.RSState rsState = RedstoneControl.RSState.enabledByDefault();
         public final ElectrolyticCrucibleBatteryTanks tanks;
-        public final StoredCapability<IEnergyStorage> energyCap;
-        public final StoredCapability<IFluidHandler> inputCap;
-        public final StoredCapability<IFluidHandler> outputCap0;
-        public final StoredCapability<IFluidHandler> outputCap1;
-        public final StoredCapability<IFluidHandler> outputCap2;
-        public final StoredCapability<IItemHandler> invCap;
-        public final StoredCapability<IItemHandler> itemOutputCap;
-        public final CapabilityReference<IItemHandler> outputRef;
+        public IFluidHandler inputCap;
+        public IFluidHandler outputCap0;
+        public IFluidHandler outputCap1;
+        public IFluidHandler outputCap2;
+        public IItemHandler invCap;
+        public IItemHandler itemOutputCap;
+        public Supplier<IItemHandler> outputRef;
         public final ITSlotwiseItemHandler inventory;
         private final IFluidTank[] tankArray;
         public final MultiblockProcessor.InMachineProcessor<ElectrolyticCrucibleBatteryRecipe> processor;
@@ -189,28 +198,48 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
             this.tanks = new ElectrolyticCrucibleBatteryTanks(v -> { onChanged.run(); this.tanksDirty = true; });
             this.tankArray = new IFluidTank[]{tanks.input, tanks.output0, tanks.output1, tanks.output2};
             inventory = new ITSlotwiseItemHandler(List.of(ITSlotwiseItemHandler.IOConstraint.OUTPUT), () -> { onChanged.run(); this.inventoryDirty = true; });
-            this.inputCap = new StoredCapability<>(new ITArrayFluidHandler(tanks.input, false, true, () -> { onChanged.run(); this.tanksDirty = true; }));
-            this.outputCap0 = new StoredCapability<>(new ITArrayFluidHandler(tanks.output0, true, false, () -> { onChanged.run(); this.tanksDirty = true; }));
-            this.outputCap1 = new StoredCapability<>(new ITArrayFluidHandler(tanks.output1, true, false, () -> { onChanged.run(); this.tanksDirty = true; }));
-            this.outputCap2 = new StoredCapability<>(new ITArrayFluidHandler(tanks.output2, true, false, () -> { onChanged.run(); this.tanksDirty = true; }));
-            this.invCap = new StoredCapability<>(inventory);
+            this.inputCap = new ITArrayFluidHandler(tanks.input, false, true, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.outputCap0 = new ITArrayFluidHandler(tanks.output0, true, false, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.outputCap1 = new ITArrayFluidHandler(tanks.output1, true, false, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.outputCap2 = new ITArrayFluidHandler(tanks.output2, true, false, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.invCap = inventory;
+            this.itemOutputCap = inventory;
             this.energy = new SyncEnergyStorage(ENERGY_CAPACITY, onChanged);
-            this.energyCap = new StoredCapability<>(this.energy);
             this.processor = new MultiblockProcessor.InMachineProcessor<>(3, 0f, 1, markDirty, ElectrolyticCrucibleBatteryRecipe.RECIPES::getById);
-            this.itemOutputCap = new StoredCapability<>(inventory);
-            this.outputRef = ctx.getCapabilityAt(ForgeCapabilities.ITEM_HANDLER, ITEM_OUTPUT_POI);
+            this.outputRef = ctx.getCapabilityAt(Capabilities.ItemHandler.BLOCK, ITEM_OUTPUT_POI);
         }
 
         public ITSlotwiseItemHandler getInventory() { return inventory; }
         public ElectrolyticCrucibleBatteryTanks getTanks() { return tanks; }
 
-        @Override public void writeSaveNBT(CompoundTag nbt) { nbt.put("energy", energy.serializeNBT()); nbt.put("tanks", this.tanks.toNBT()); nbt.put("processor", processor.toNBT()); nbt.put("inventory", inventory.serializeNBT()); nbt.putBoolean("active", active); }
+        @Override public void writeSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            nbt.put("energy", energy.serializeNBT(provider));
+            nbt.put("tanks", this.tanks.toNBT(provider));
+            nbt.put("processor", processor.toNBT(provider));
+            nbt.put("inventory", inventory.serializeNBT(provider));
+            nbt.putBoolean("active", active);
+        }
 
-        @Override public void readSaveNBT(CompoundTag nbt) { energy.deserializeNBT(nbt.get("energy")); this.tanks.readNBT(nbt.getCompound("tanks")); this.processor.fromNBT(nbt.getList("processor", Tag.TAG_COMPOUND), ElectrolyticCrucibleBatteryProcess::new); this.inventory.deserializeNBT(nbt.getCompound("inventory")); active = nbt.getBoolean("active"); tanksDirty = false; inventoryDirty = false; }
+        @Override public void readSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            CompoundTag energyTag = nbt.getCompound("energy");
+            if (!energyTag.isEmpty()) { energy.deserializeNBT(provider, energyTag); }
+            this.tanks.readNBT(nbt.getCompound("tanks"), provider);
+            this.processor.fromNBT(nbt.getList("processor", Tag.TAG_COMPOUND), ElectrolyticCrucibleBatteryProcess::new, provider);
+            this.inventory.deserializeNBT(provider, nbt.getCompound("inventory"));
+            active = nbt.getBoolean("active");
+            tanksDirty = false;
+            inventoryDirty = false;
+        }
 
-        @Override public void writeSyncNBT(CompoundTag nbt) { CompoundTag display = new CompoundTag(); writeDisplaySyncNBT(display); nbt.put("display", display); }
+        @Override public void writeSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            CompoundTag display = new CompoundTag();
+            writeDisplaySyncNBT(display, provider);
+            nbt.put("display", display);
+        }
 
-        @Override public void readSyncNBT(CompoundTag nbt) { if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display")); } }
+        @Override public void readSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display"), provider); }
+        }
 
         @Override public AveragingEnergyStorage getEnergy() { return energy; }
         @Override public IFluidTank[] getInternalTanks() { return tankArray; }
@@ -218,28 +247,44 @@ public class ElectrolyticCrucibleBatteryLogic implements IMultiblockLogic<Electr
         @Override public int[] getOutputSlots() { return new int[0]; }
         @Override public boolean isActive() { return active; }
 
-        @Override public void writeDisplaySyncNBT(CompoundTag nbt) { nbt.putBoolean("active", active); nbt.put("tanks", tanks.toNBT()); nbt.put("energy", energy.serializeNBT()); nbt.put("inventory", inventory.serializeNBT()); }
+        @Override public void writeDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            nbt.putBoolean("active", active);
+            nbt.put("tanks", tanks.toNBT(provider));
+            nbt.put("energy", energy.serializeNBT(provider));
+            nbt.put("inventory", inventory.serializeNBT(provider));
+        }
 
-        @Override public void readDisplaySyncNBT(CompoundTag nbt) { active = nbt.getBoolean("active"); tanks.readNBT(nbt.getCompound("tanks")); if (energy == null) { energy = new SyncEnergyStorage(ENERGY_CAPACITY, () -> {}); } energy.deserializeNBT(nbt.get("energy")); inventory.deserializeNBT(nbt.getCompound("inventory")); tanksDirty = false; inventoryDirty = false; }
+        @Override public void readDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            active = nbt.getBoolean("active");
+            tanks.readNBT(nbt.getCompound("tanks"), provider);
+            if (energy == null) { energy = new SyncEnergyStorage(ENERGY_CAPACITY, () -> {}); }
+            CompoundTag energyTag = nbt.getCompound("energy");
+            if (!energyTag.isEmpty()) { energy.deserializeNBT(provider, energyTag); }
+            inventory.deserializeNBT(provider, nbt.getCompound("inventory"));
+            tanksDirty = false;
+            inventoryDirty = false;
+        }
     }
 
     public record ElectrolyticCrucibleBatteryTanks(ITMarkableFluidTank input, ITMarkableFluidTank output0, ITMarkableFluidTank output1, ITMarkableFluidTank output2) {
-        public ElectrolyticCrucibleBatteryTanks(Consumer<Void> markDirty) { this(new ITMarkableFluidTank(INPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty)); }
+        public ElectrolyticCrucibleBatteryTanks(Consumer<Void> markDirty) {
+            this(new ITMarkableFluidTank(INPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty), new ITMarkableFluidTank(OUTPUT_TANK_CAPACITY, markDirty));
+        }
 
-        public CompoundTag toNBT() {
+        public CompoundTag toNBT(HolderLookup.Provider provider) {
             CompoundTag tag = new CompoundTag();
-            tag.put("input", input.writeToNBT(new CompoundTag()));
-            tag.put("output0", output0.writeToNBT(new CompoundTag()));
-            tag.put("output1", output1.writeToNBT(new CompoundTag()));
-            tag.put("output2", output2.writeToNBT(new CompoundTag()));
+            tag.put("input", input.writeToNBT(provider, new CompoundTag()));
+            tag.put("output0", output0.writeToNBT(provider, new CompoundTag()));
+            tag.put("output1", output1.writeToNBT(provider, new CompoundTag()));
+            tag.put("output2", output2.writeToNBT(provider, new CompoundTag()));
             return tag;
         }
 
-        public void readNBT(CompoundTag tag) {
-            input.readFromNBT(tag.getCompound("input"));
-            output0.readFromNBT(tag.getCompound("output0"));
-            output1.readFromNBT(tag.getCompound("output1"));
-            output2.readFromNBT(tag.getCompound("output2"));
+        public void readNBT(CompoundTag tag, HolderLookup.Provider provider) {
+            input.readFromNBT(provider, tag.getCompound("input"));
+            output0.readFromNBT(provider, tag.getCompound("output0"));
+            output1.readFromNBT(provider, tag.getCompound("output1"));
+            output2.readFromNBT(provider, tag.getCompound("output2"));
         }
     }
 
