@@ -3,6 +3,7 @@ package mctmods.immersivetechnology.common.multiblocks.metal.logic;
 import blusunrize.immersiveengineering.api.IETags;
 import blusunrize.immersiveengineering.api.energy.AveragingEnergyStorage;
 import blusunrize.immersiveengineering.api.fluid.FluidUtils;
+import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IMultiblockComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IServerTickableComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.RedstoneControl.RSState;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.env.IInitialMultiblockContext;
@@ -16,9 +17,9 @@ import blusunrize.immersiveengineering.common.blocks.multiblocks.logic.interface
 import blusunrize.immersiveengineering.common.util.LayeredComparatorOutput;
 import blusunrize.immersiveengineering.common.util.Utils;
 import com.google.common.collect.ImmutableList;
-import mctmods.immersivetechnology.common.multiblocks.helper.ITDisplayContext;
+import mctmods.immersivetechnology.common.multiblocks.helper.ITIDisplayContext;
 import mctmods.immersivetechnology.common.multiblocks.helper.ITMultiblockPOIHelper;
-import mctmods.immersivetechnology.common.multiblocks.helper.ITPressurizedFluidOutput;
+import mctmods.immersivetechnology.common.multiblocks.helper.ITIPressurizedFluidOutput;
 import mctmods.immersivetechnology.common.multiblocks.metal.shapes.SteelSheetmetalTankShape;
 import mctmods.immersivetechnology.core.util.TranslationKey;
 import mctmods.immersivetechnology.common.fluids.helper.ITMarkableFluidTank;
@@ -26,22 +27,21 @@ import mctmods.immersivetechnology.core.util.multiblock.PoIJSONSchema;
 import mctmods.immersivetechnology.core.ITServerConfig;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
+import net.minecraft.world.ItemInteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.shapes.VoxelShape;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.fluids.IFluidTank;
-import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.items.IItemHandlerModifiable;
+import net.neoforged.neoforge.capabilities.Capabilities;
+import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.IFluidTank;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler;
+import net.neoforged.neoforge.items.IItemHandlerModifiable;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
@@ -54,13 +54,13 @@ import java.util.stream.Stream;
 
 import static mctmods.immersivetechnology.common.multiblocks.metal.shapes.SteelSheetmetalTankShape.DATA;
 
-public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmetalTankLogic.State>, IServerTickableComponent<SteelSheetmetalTankLogic.State>, MBOverlayText<SteelSheetmetalTankLogic.State>, ITPressurizedFluidOutput<SteelSheetmetalTankLogic.State> {
+public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmetalTankLogic.State>, IServerTickableComponent<SteelSheetmetalTankLogic.State>, MBOverlayText<SteelSheetmetalTankLogic.State>, ITIPressurizedFluidOutput<SteelSheetmetalTankLogic.State> {
 
     private static final List<PoIJSONSchema> RAW_POIS = ImmutableList.copyOf(DATA.pointsOfInterest);
-    public static final BlockPos REDSTONE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "redstone0").get(0);
+    public static final BlockPos REDSTONE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "redstone0").getFirst();
     private static final List<CapabilityPosition> INPUT_POIS = ITMultiblockPOIHelper.getCapabilityPositions(RAW_POIS, "fluid_input0");
     private static final List<CapabilityPosition> IO_POIS = ITMultiblockPOIHelper.getCapabilityPositions(RAW_POIS, "fluid_io0");
-    private static final BlockPos COMPARATOR_BASE = ITMultiblockPOIHelper.getPosList(RAW_POIS, "comparator_base0").get(0);
+    private static final BlockPos COMPARATOR_BASE = ITMultiblockPOIHelper.getPosList(RAW_POIS, "comparator_base0").getFirst();
     private static final List<BlockPos> COMPARATOR_LAYERS;
 
     static {
@@ -91,7 +91,7 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
 
         @Override public boolean isFluidValid(int tank, @NotNull FluidStack stack) { return this.tank.isFluidValid(stack); }
 
-        @Override public int fill(FluidStack resource, FluidAction action) {
+        @Override public int fill(@NotNull FluidStack resource, @NotNull FluidAction action) {
             if (!canFill || resource.isEmpty()) return 0;
             if (action == FluidAction.SIMULATE) return this.tank.fill(resource, FluidAction.SIMULATE);
             int filled = this.tank.fill(resource, FluidAction.EXECUTE);
@@ -99,14 +99,14 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
             return filled;
         }
 
-        @Override @NotNull public FluidStack drain(FluidStack resource, FluidAction action) {
+        @Override @NotNull public FluidStack drain(@NotNull FluidStack resource, @NotNull FluidAction action) {
             if (!canDrain || !allowDrain.get() || resource.isEmpty()) return FluidStack.EMPTY;
             FluidStack drained = this.tank.drain(resource, action);
             if (!drained.isEmpty() && action == FluidAction.EXECUTE) onChange.run();
             return drained;
         }
 
-        @Override @NotNull public FluidStack drain(int maxDrain, FluidAction action) {
+        @Override @NotNull public FluidStack drain(int maxDrain, @NotNull FluidAction action) {
             if (!canDrain || !allowDrain.get() || maxDrain <= 0) return FluidStack.EMPTY;
             FluidStack drained = this.tank.drain(maxDrain, action);
             if (!drained.isEmpty() && action == FluidAction.EXECUTE) onChange.run();
@@ -114,19 +114,19 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
         }
     }
 
-    public static class State implements IMultiblockState, ITDisplayContext {
+    public static class State implements IMultiblockState, ITIDisplayContext {
         public final ITMarkableFluidTank tank;
         private final LayeredComparatorOutput<IMultiblockContext<State>> comparatorHelper;
-        private final StoredCapability<IFluidHandler> inputHandler;
-        private final StoredCapability<IFluidHandler> ioHandler;
+        public IFluidHandler inputHandler;
+        public IFluidHandler ioHandler;
         public RSState rsState = RSState.disabledByDefault();
         public boolean active = false;
 
         public State(IInitialMultiblockContext<State> capabilitySource) {
             Runnable changedAndSync = () -> { capabilitySource.getSyncRunnable().run(); capabilitySource.getMarkDirtyRunnable().run(); };
             this.tank = new ITMarkableFluidTank(ITServerConfig.steelSheetmetalTankCapacity, v -> changedAndSync.run());
-            this.inputHandler = new StoredCapability<>(new ConditionalFluidHandler(tank, true, false, changedAndSync, () -> false));
-            this.ioHandler = new StoredCapability<>(new ConditionalFluidHandler(tank, true, true, changedAndSync, () -> true));
+            this.inputHandler = new ConditionalFluidHandler(tank, true, false, changedAndSync, () -> false);
+            this.ioHandler = new ConditionalFluidHandler(tank, true, true, changedAndSync, () -> true);
             try {
                 Field positionsField = RSState.class.getDeclaredField("positions");
                 positionsField.setAccessible(true);
@@ -162,36 +162,36 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
 
         @Override public IFluidTank[] getInternalTanks() { return new IFluidTank[]{tank}; }
 
-        @Override public void writeSaveNBT(CompoundTag nbt) {
-            nbt.put("tank", tank.writeToNBT(new CompoundTag()));
+        @Override public void writeSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            nbt.put("tank", tank.writeToNBT(provider, new CompoundTag()));
             CompoundTag rsTag = new CompoundTag();
-            rsState.writeSaveNBT(rsTag);
+            rsState.writeSaveNBT(rsTag, provider);
             nbt.put("rsState", rsTag);
         }
 
-        @Override public void readSaveNBT(CompoundTag nbt) {
-            tank.readFromNBT(nbt.getCompound("tank"));
-            rsState.readSaveNBT(nbt.getCompound("rsState"));
+        @Override public void readSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            tank.readFromNBT(provider, nbt.getCompound("tank"));
+            rsState.readSaveNBT(nbt.getCompound("rsState"), provider);
         }
 
-        @Override public void writeSyncNBT(CompoundTag nbt) {
+        @Override public void writeSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             CompoundTag display = new CompoundTag();
-            writeDisplaySyncNBT(display);
+            writeDisplaySyncNBT(display, provider);
             nbt.put("display", display);
         }
 
-        @Override public void readSyncNBT(CompoundTag nbt) {
-            if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display")); }
+        @Override public void readSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display"), provider); }
         }
 
-        @Override public void writeDisplaySyncNBT(CompoundTag nbt) {
+        public void writeDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             nbt.putBoolean("active", active);
-            nbt.put("tank", tank.writeToNBT(new CompoundTag()));
+            nbt.put("tank", tank.writeToNBT(provider, new CompoundTag()));
         }
 
-        @Override public void readDisplaySyncNBT(CompoundTag nbt) {
+        public void readDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             active = nbt.getBoolean("active");
-            tank.readFromNBT(nbt.getCompound("tank"));
+            tank.readFromNBT(provider, nbt.getCompound("tank"));
         }
     }
 
@@ -210,29 +210,28 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
 
     @Override public State createInitialState(IInitialMultiblockContext<State> capabilitySource) { return new State(capabilitySource); }
 
-    @Override public <T> LazyOptional<T> getCapability(IMultiblockContext<State> ctx, CapabilityPosition position, Capability<T> cap) {
-        State state = ctx.getState();
-        if (cap == ForgeCapabilities.FLUID_HANDLER) {
+    @Override
+    public void registerCapabilities(IMultiblockComponent.CapabilityRegistrar<State> register) {
+        register.register(Capabilities.FluidHandler.BLOCK, (state, position) -> {
             BlockPos posIn = position.posInMultiblock();
             RelativeBlockFace side = position.side();
-            if (side != null) {
-                if (INPUT_POIS.stream().anyMatch(p -> p.posInMultiblock().equals(posIn) && p.side() == side)) return state.inputHandler.cast(ctx);
-                if (IO_POIS.stream().anyMatch(p -> p.posInMultiblock().equals(posIn) && p.side() == side)) return state.ioHandler.cast(ctx);
-            }
-        }
-        return LazyOptional.empty();
+            if (side == null) return null;
+            if (INPUT_POIS.stream().anyMatch(p -> p.posInMultiblock().equals(posIn) && p.side() == side)) return state.inputHandler;
+            if (IO_POIS.stream().anyMatch(p -> p.posInMultiblock().equals(posIn) && p.side() == side)) return state.ioHandler;
+            return null;
+        });
     }
 
     @Override public void dropExtraItems(State state, java.util.function.Consumer<net.minecraft.world.item.ItemStack> drop) { }
 
-    @Override @Nullable public List<Component> getOverlayText(State state, Player player, boolean hammer) {
+    @Override @Nullable public List<Component> getOverlayText(State state, BlockPos pos, BlockHitResult hit, Player player, boolean hammer) {
         if (Utils.isFluidRelatedItemStack(player.getItemInHand(InteractionHand.MAIN_HAND))) return List.of(TextUtils.formatFluidStack(state.tank.getFluid()));
         return null;
     }
 
     @Override public Function<BlockPos, VoxelShape> shapeGetter(ShapeType forType) { return SteelSheetmetalTankShape.GETTER; }
 
-    @Override public InteractionResult click(IMultiblockContext<State> ctx, BlockPos posInMultiblock, Player player, InteractionHand hand, BlockHitResult absoluteHit, boolean isClient) {
+    public ItemInteractionResult click(IMultiblockContext<State> ctx, BlockPos posInMultiblock, Player player, InteractionHand hand, BlockHitResult absoluteHit, boolean isClient) {
         if (posInMultiblock.equals(REDSTONE_POI) && player.getItemInHand(hand).is(IETags.screwdrivers)) {
             if (!isClient) {
                 State state = ctx.getState();
@@ -249,8 +248,8 @@ public class SteelSheetmetalTankLogic implements IMultiblockLogic<SteelSheetmeta
                     throw new RuntimeException("Failed to invert RSState", e);
                 }
             }
-            return InteractionResult.SUCCESS;
+            return ItemInteractionResult.SUCCESS;
         }
-        if (FluidUtils.interactWithFluidHandler(player, hand, ctx.getState().tank)) { ctx.markMasterDirty(); ctx.requestMasterBESync(); return InteractionResult.SUCCESS; } else return InteractionResult.PASS;
+        if (FluidUtils.interactWithFluidHandler(player, hand, ctx.getState().tank)) { ctx.markMasterDirty(); ctx.requestMasterBESync(); return ItemInteractionResult.SUCCESS; } else return ItemInteractionResult.PASS_TO_DEFAULT_BLOCK_INTERACTION;
     }
 }
