@@ -1,6 +1,7 @@
 package mctmods.immersivetechnology.common.multiblocks.stone.logic;
 
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IClientTickableComponent;
+import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IMultiblockComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.component.IServerTickableComponent;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.env.IInitialMultiblockContext;
 import blusunrize.immersiveengineering.api.multiblocks.blocks.env.IMultiblockContext;
@@ -11,9 +12,9 @@ import blusunrize.immersiveengineering.api.multiblocks.blocks.util.*;
 import com.google.common.collect.ImmutableList;
 import mctmods.immersivetechnology.common.fluids.helper.ITArrayFluidHandler;
 import mctmods.immersivetechnology.common.fluids.helper.ITMarkableFluidTank;
-import mctmods.immersivetechnology.common.multiblocks.helper.ITDisplayContext;
+import mctmods.immersivetechnology.common.multiblocks.helper.ITIDisplayContext;
 import mctmods.immersivetechnology.common.multiblocks.helper.ITMultiblockPOIHelper;
-import mctmods.immersivetechnology.common.multiblocks.helper.ITPressurizedFluidOutput;
+import mctmods.immersivetechnology.common.multiblocks.helper.ITIPressurizedFluidOutput;
 import mctmods.immersivetechnology.common.multiblocks.stone.process.CoolingTowerProcess;
 import mctmods.immersivetechnology.common.multiblocks.stone.recipe.CoolingTowerRecipe;
 import mctmods.immersivetechnology.common.multiblocks.stone.shapes.CoolingTowerShape;
@@ -26,6 +27,7 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.util.RandomSource;
@@ -33,13 +35,11 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.shapes.VoxelShape;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.fluids.IFluidTank;
-import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
+import net.neoforged.neoforge.capabilities.Capabilities;
+import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.IFluidTank;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler.FluidAction;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -47,7 +47,7 @@ import java.util.function.BooleanSupplier;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
-public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.State>, IServerTickableComponent<CoolingTowerLogic.State>, IClientTickableComponent<CoolingTowerLogic.State>, ITPressurizedFluidOutput<CoolingTowerLogic.State> {
+public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.State>, IServerTickableComponent<CoolingTowerLogic.State>, IClientTickableComponent<CoolingTowerLogic.State>, ITIPressurizedFluidOutput<CoolingTowerLogic.State> {
     public static final int INPUT_TANK_CAPACITY = ITServerConfig.coolingTowerInputTankCapacity;
     public static final int OUTPUT_TANK_CAPACITY = ITServerConfig.coolingTowerOutputTankCapacity;
 
@@ -55,8 +55,8 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
 
     public static final List<BlockPos> INPUT_FLUID_POIS = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_input0");
     public static final List<BlockPos> OUTPUT_FLUID_POIS = ITMultiblockPOIHelper.getPosList(RAW_POIS, "fluid_output0");
-    public static final BlockPos PARTICLE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "particle0").get(0);
-    public static final BlockPos SOUND_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "sound0").get(0);
+    public static final BlockPos PARTICLE_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "particle0").getFirst();
+    public static final BlockPos SOUND_POI = ITMultiblockPOIHelper.getPosList(RAW_POIS, "sound0").getFirst();
 
     private static final RelativeBlockFace INPUT_FACING = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_input0");
     private static final RelativeBlockFace OUTPUT_FACING = ITMultiblockPOIHelper.getFacing(RAW_POIS, "fluid_output0");
@@ -65,7 +65,7 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
 
     @Override public Direction getOutputDirection(IMultiblockContext<State> ctx) { return ctx.getLevel().toAbsolute(OUTPUT_FACING); }
 
-    @Override public List<ITMarkableFluidTank> getOutputTanks(State state) { return ImmutableList.of(state.tanks.output0, state.tanks.output1, state.tanks.output2); }
+    @Override public List<ITMarkableFluidTank> getOutputTanks(State state) { return ImmutableList.of(state.tanks.output0(), state.tanks.output1(), state.tanks.output2()); }
 
     private double getBiomeSpeedMultiplier(IMultiblockContext<State> ctx) {
         if (ITServerConfig.coolingTowerBiomeTempFactor <= 0.0D) return 1.0D;
@@ -127,8 +127,8 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
             if (process.isComplete()) { state.processQueue.remove(i); }
         }
         if (state.processQueue.size() < getProcessQueueMaxLength()) {
-            FluidStack in0 = state.tanks.input0.getFluid();
-            FluidStack in1 = state.tanks.input1.getFluid();
+            FluidStack in0 = state.tanks.input0().getFluid();
+            FluidStack in1 = state.tanks.input1().getFluid();
             CoolingTowerRecipe recipe = CoolingTowerRecipe.findRecipe(level, in0, in1);
             boolean swapped = false;
             if (recipe == null) {
@@ -138,13 +138,20 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
             if (recipe != null) {
                 FluidStack firstIn = swapped ? in1 : in0;
                 FluidStack secondIn = swapped ? in0 : in1;
-                if (firstIn.getAmount() >= recipe.input0.getAmount() && secondIn.getAmount() >= recipe.input1.getAmount()) {
+                int req0 = recipe.getInput0Amount();
+                int req1 = recipe.getInput1Amount();
+                if (firstIn.getAmount() >= req0 && secondIn.getAmount() >= req1) {
                     boolean canOutput = true;
-                    if (!recipe.fluidOutput0.isEmpty()) { canOutput &= state.tanks.output0.fill(recipe.fluidOutput0, FluidAction.SIMULATE) >= recipe.fluidOutput0.getAmount(); }
-                    if (!recipe.fluidOutput1.isEmpty()) { canOutput &= state.tanks.output1.fill(recipe.fluidOutput1, FluidAction.SIMULATE) >= recipe.fluidOutput1.getAmount(); }
-                    if (!recipe.fluidOutput2.isEmpty()) { canOutput &= state.tanks.output2.fill(recipe.fluidOutput2, FluidAction.SIMULATE) >= recipe.fluidOutput2.getAmount(); }
+                    FluidStack out0 = recipe.fluidOutput0();
+                    FluidStack out1 = recipe.fluidOutput1();
+                    FluidStack out2 = recipe.fluidOutput2();
+                    if (!out0.isEmpty()) { canOutput &= state.tanks.output0().fill(out0, FluidAction.SIMULATE) >= out0.getAmount(); }
+                    if (!out1.isEmpty()) { canOutput &= state.tanks.output1().fill(out1, FluidAction.SIMULATE) >= out1.getAmount(); }
+                    if (!out2.isEmpty()) { canOutput &= state.tanks.output2().fill(out2, FluidAction.SIMULATE) >= out2.getAmount(); }
                     if (canOutput) {
-                        CoolingTowerRecipe useRecipe = swapped ? new CoolingTowerRecipe(recipe.getId(), recipe.fluidOutput0, recipe.fluidOutput1, recipe.fluidOutput2, recipe.input1, recipe.input0, recipe.totalProcessTime) : recipe;
+                        CoolingTowerRecipe useRecipe = swapped
+                                ? new CoolingTowerRecipe(out0, out1, out2, recipe.inputTag1(), req1, recipe.inputTag0(), req0, recipe.getTotalProcessTime())
+                                : recipe;
                         state.processQueue.add(new CoolingTowerProcess(useRecipe));
                     }
                 }
@@ -154,9 +161,9 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
         boolean activeChanged = wasActive != state.active;
         boolean progressChanged = false;
         if (!state.processQueue.isEmpty()) {
-            CoolingTowerProcess current = state.processQueue.get(0);
+            CoolingTowerProcess current = state.processQueue.getFirst();
             int newProg = current.getTicksProcessed();
-            int newTotal = current.getRecipe().totalProcessTime;
+            int newTotal = current.getRecipe().getTotalProcessTime();
             if (newProg != state.processProgress || newTotal != state.totalProcessTime) {
                 state.processProgress = newProg;
                 state.totalProcessTime = newTotal;
@@ -174,37 +181,37 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
 
     private int getProcessQueueMaxLength() { return 3; }
 
-    @Override public <T> LazyOptional<T> getCapability(IMultiblockContext<CoolingTowerLogic.State> ctx, CapabilityPosition position, Capability<T> cap) {
-        CoolingTowerLogic.State state = ctx.getState();
-        if (cap == ForgeCapabilities.FLUID_HANDLER) {
+    @Override
+    public void registerCapabilities(IMultiblockComponent.CapabilityRegistrar<State> register) {
+        register.register(Capabilities.FluidHandler.BLOCK, (state, position) -> {
             BlockPos localPos = position.posInMultiblock();
             RelativeBlockFace side = position.side();
             if (INPUT_FLUID_POIS.contains(localPos) && (side == null || side == INPUT_FACING)) {
                 int index = INPUT_FLUID_POIS.indexOf(localPos);
-                if (index == 0) { return state.input0Cap.cast(ctx); }
-                if (index == 1) { return state.input1Cap.cast(ctx); }
+                if (index == 0) { return state.input0Cap; }
+                if (index == 1) { return state.input1Cap; }
             }
             if (OUTPUT_FLUID_POIS.contains(localPos) && (side == null || side == OUTPUT_FACING)) {
                 int index = OUTPUT_FLUID_POIS.indexOf(localPos);
-                if (index == 0) { return state.output0Cap.cast(ctx); }
-                if (index == 1) { return state.output1Cap.cast(ctx); }
-                if (index == 2) { return state.output2Cap.cast(ctx); }
+                if (index == 0) { return state.output0Cap; }
+                if (index == 1) { return state.output1Cap; }
+                if (index == 2) { return state.output2Cap; }
             }
-        }
-        return LazyOptional.empty();
+            return null;
+        });
     }
 
     @Override public CoolingTowerLogic.State createInitialState(IInitialMultiblockContext<CoolingTowerLogic.State> ctx) { return new State(ctx); }
 
     @Override public Function<BlockPos, VoxelShape> shapeGetter(ShapeType shapeType) { return CoolingTowerShape.GETTER; }
 
-    public static class State implements IMultiblockState, ITDisplayContext {
+    public static class State implements IMultiblockState, ITIDisplayContext {
         public final CoolingTowerTanks tanks;
-        public final StoredCapability<IFluidHandler> input0Cap;
-        public final StoredCapability<IFluidHandler> input1Cap;
-        public final StoredCapability<IFluidHandler> output0Cap;
-        public final StoredCapability<IFluidHandler> output1Cap;
-        public final StoredCapability<IFluidHandler> output2Cap;
+        public IFluidHandler input0Cap;
+        public IFluidHandler input1Cap;
+        public IFluidHandler output0Cap;
+        public IFluidHandler output1Cap;
+        public IFluidHandler output2Cap;
         public boolean active;
         public int soundCooldown = 0;
         public List<CoolingTowerProcess> processQueue = new ArrayList<>();
@@ -216,50 +223,51 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
         public State(IInitialMultiblockContext<State> ctx) {
             Runnable markDirty = ctx.getMarkDirtyRunnable();
             Runnable sync = ctx.getSyncRunnable();
-            Consumer<Void> onChanged = v -> { markDirty.run(); sync.run(); this.tanksDirty = true; };
-            this.tanks = new CoolingTowerTanks(onChanged);
-            this.input0Cap = new StoredCapability<>(ITArrayFluidHandler.fillOnly(tanks.input0, () -> onChanged.accept(null)));
-            this.input1Cap = new StoredCapability<>(ITArrayFluidHandler.fillOnly(tanks.input1, () -> onChanged.accept(null)));
-            this.output0Cap = new StoredCapability<>(ITArrayFluidHandler.drainOnly(tanks.output0, () -> onChanged.accept(null)));
-            this.output1Cap = new StoredCapability<>(ITArrayFluidHandler.drainOnly(tanks.output1, () -> onChanged.accept(null)));
-            this.output2Cap = new StoredCapability<>(ITArrayFluidHandler.drainOnly(tanks.output2, () -> onChanged.accept(null)));
+            Runnable onChanged = () -> { markDirty.run(); sync.run(); this.tanksDirty = true; };
+
+            this.tanks = new CoolingTowerTanks(v -> { onChanged.run(); this.tanksDirty = true; });
+            this.input0Cap = new ITArrayFluidHandler(tanks.input0(), false, true, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.input1Cap = new ITArrayFluidHandler(tanks.input1(), false, true, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.output0Cap = new ITArrayFluidHandler(tanks.output0(), true, false, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.output1Cap = new ITArrayFluidHandler(tanks.output1(), true, false, () -> { onChanged.run(); this.tanksDirty = true; });
+            this.output2Cap = new ITArrayFluidHandler(tanks.output2(), true, false, () -> { onChanged.run(); this.tanksDirty = true; });
         }
 
-        @Override public void writeSaveNBT(CompoundTag nbt) {
-            nbt.put("tanks", tanks.toNBT());
+        @Override public void writeSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            nbt.put("tanks", tanks.toNBT(provider));
             nbt.putBoolean("active", active);
         }
 
-        @Override public void readSaveNBT(CompoundTag nbt) {
-            tanks.readNBT(nbt.getCompound("tanks"));
+        @Override public void readSaveNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            tanks.readNBT(nbt.getCompound("tanks"), provider);
             active = nbt.getBoolean("active");
             tanksDirty = false;
         }
 
-        @Override public void writeSyncNBT(CompoundTag nbt) {
+        @Override public void writeSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             CompoundTag display = new CompoundTag();
-            writeDisplaySyncNBT(display);
+            writeDisplaySyncNBT(display, provider);
             nbt.put("display", display);
         }
 
-        @Override public void readSyncNBT(CompoundTag nbt) {
-            if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display")); }
+        @Override public void readSyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
+            if (nbt.contains("display", Tag.TAG_COMPOUND)) { readDisplaySyncNBT(nbt.getCompound("display"), provider); }
         }
 
         @Override public boolean isActive() { return active; }
 
-        @Override public IFluidTank[] getInternalTanks() { return new IFluidTank[]{tanks.input0, tanks.input1, tanks.output0, tanks.output1, tanks.output2}; }
+        @Override public IFluidTank[] getInternalTanks() { return new IFluidTank[]{tanks.input0(), tanks.input1(), tanks.output0(), tanks.output1(), tanks.output2()}; }
 
-        @Override public void writeDisplaySyncNBT(CompoundTag nbt) {
+        @Override public void writeDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             nbt.putBoolean("active", active);
-            nbt.put("tanks", tanks.toNBT());
+            nbt.put("tanks", tanks.toNBT(provider));
             nbt.putInt("processProgress", processProgress);
             nbt.putInt("totalProcessTime", totalProcessTime);
         }
 
-        @Override public void readDisplaySyncNBT(CompoundTag nbt) {
+        @Override public void readDisplaySyncNBT(CompoundTag nbt, HolderLookup.Provider provider) {
             active = nbt.getBoolean("active");
-            tanks.readNBT(nbt.getCompound("tanks"));
+            tanks.readNBT(nbt.getCompound("tanks"), provider);
             processProgress = nbt.getInt("processProgress");
             totalProcessTime = nbt.getInt("totalProcessTime");
             tanksDirty = false;
@@ -274,22 +282,22 @@ public class CoolingTowerLogic implements IMultiblockLogic<CoolingTowerLogic.Sta
 
         public static CoolingTowerTanks makeClient() { return new CoolingTowerTanks(v -> {}); }
 
-        public CompoundTag toNBT() {
+        public CompoundTag toNBT(HolderLookup.Provider provider) {
             CompoundTag tag = new CompoundTag();
-            tag.put("input0", input0.writeToNBT(new CompoundTag()));
-            tag.put("input1", input1.writeToNBT(new CompoundTag()));
-            tag.put("output0", output0.writeToNBT(new CompoundTag()));
-            tag.put("output1", output1.writeToNBT(new CompoundTag()));
-            tag.put("output2", output2.writeToNBT(new CompoundTag()));
+            tag.put("input0", input0.writeToNBT(provider, new CompoundTag()));
+            tag.put("input1", input1.writeToNBT(provider, new CompoundTag()));
+            tag.put("output0", output0.writeToNBT(provider, new CompoundTag()));
+            tag.put("output1", output1.writeToNBT(provider, new CompoundTag()));
+            tag.put("output2", output2.writeToNBT(provider, new CompoundTag()));
             return tag;
         }
 
-        public void readNBT(CompoundTag tag) {
-            input0.readFromNBT(tag.getCompound("input0"));
-            input1.readFromNBT(tag.getCompound("input1"));
-            output0.readFromNBT(tag.getCompound("output0"));
-            output1.readFromNBT(tag.getCompound("output1"));
-            output2.readFromNBT(tag.getCompound("output2"));
+        public void readNBT(CompoundTag tag, HolderLookup.Provider provider) {
+            input0.readFromNBT(provider, tag.getCompound("input0"));
+            input1.readFromNBT(provider, tag.getCompound("input1"));
+            output0.readFromNBT(provider, tag.getCompound("output0"));
+            output1.readFromNBT(provider, tag.getCompound("output1"));
+            output2.readFromNBT(provider, tag.getCompound("output2"));
         }
     }
 }
